fix div break on print

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -13,3 +13,9 @@ ul {
 hr {
   margin: 0 0 0 0;
 }
+
+@media print {
+  div {
+    break-inside: avoid;
+  }
+}
